--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 	</head>
 	<body>
 		<header>
-			<h1>Asteroids Part 1</h1>
+			<h1>Asteroids Part 3</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    By Grace
+		    Press W to accelerate <br>
+		    Press S to go backwards <br>
+		    press D to rotate right <br>
+		    press A to rotate left 
 	    </footer>
 	</body>
 </html>
